--- a/exer3/styles.css
+++ b/exer3/styles.css
@@ -39,6 +39,12 @@ body {
     border-radius: 5px;
     background-color: #4285F4;
     border-color: #4285F4;
+    transition: #245096 1000ms ease;
+  }
+
+  .navbar .links li:hover {
+    background-color: #245096; /* New color on hover */
+    border-color: #245096;
 
   }
   
